# lambda-lanczos

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  codecov.yml  sample1  sample2  sample3  sample4
.github/workflows/: ci.yml
doxygen_src/: mainpage.dox
include/lambda_lanczos/: eigenpair_manager.hpp  exponentiator.hpp  lambda_lanczos.hpp  lambda_lanczos_tridiagonal.hpp  lambda_lanczos_tridiagonal_impl.hpp  lambda_lanczos_tridiagonal_lapack.hpp  lambda_lanczos_util.hpp  macro.hpp
include/lambda_lanczos/util/: common.hpp  linear_algebra.hpp  linear_algebra_lapack.hpp
src/determine_eigenvalue_offset/: determine_eigenvalue_offset.cpp
src/lambda_lanczos/: lambda_lanczos.cpp  lambda_lanczos.hpp  lambda_lanczos_util.cpp  lambda_lanczos_util.hpp
src/lambda_lanczos_test/: lambda_lanczos_test.cpp
src/samples/: CMakeLists.txt  sample1_simple.cpp  sample2_sparse.cpp  sample3_dynamic.cpp  sample4_use_Eigen_library.cpp  sample5_multiroot.cpp
test/: CMakeLists.txt  exponentiator_test.cpp  lambda_lanczos_test.cpp
